--- a/css/styles.css
+++ b/css/styles.css
@@ -6523,12 +6523,12 @@ body {
 }
 #starfield1.image,
 #starfield1 .image {
-  background-position: left 0px top 0%;
+  background-position: left 0px top -15%;
   -skrollr-animation-name: starfield1-pos;
 }
 @-skrollr-keyframes starfield1-pos {
-  _sky_phase_start {
-    background-position[linear]: left 0px top 0%;
+  _sky_phase_start_before {
+    background-position[linear]: left 0px top -15%;
   }
   _sky_phase_end {
     background-position[linear]: left 0px top 75%;
@@ -6553,12 +6553,12 @@ body {
 }
 #starfield2.image,
 #starfield2 .image {
-  background-position: left 0px top 0%;
+  background-position: left 0px top -33.3%;
   -skrollr-animation-name: starfield2-pos;
 }
 @-skrollr-keyframes starfield2-pos {
-  _sky_phase_start {
-    background-position[linear]: left 0px top 0%;
+  _sky_phase_start_before {
+    background-position[linear]: left 0px top -33.3%;
   }
   _sky_phase_end {
     background-position[linear]: left 0px top 166.5%;
@@ -6583,12 +6583,12 @@ body {
 }
 #starfield3.image,
 #starfield3 .image {
-  background-position: left 0px top 0%;
+  background-position: left 0px top -50%;
   -skrollr-animation-name: starfield3-pos;
 }
 @-skrollr-keyframes starfield3-pos {
-  _sky_phase_start {
-    background-position[linear]: left 0px top 0%;
+  _sky_phase_start_before {
+    background-position[linear]: left 0px top -50%;
   }
   _sky_phase_end {
     background-position[linear]: left 0px top 250%;
@@ -6613,12 +6613,12 @@ body {
 }
 #starfield4.image,
 #starfield4 .image {
-  background-position: left 0px top 0%;
+  background-position: left 0px top -25%;
   -skrollr-animation-name: starfield4-pos;
 }
 @-skrollr-keyframes starfield4-pos {
-  _sky_phase_start {
-    background-position[linear]: left 0px top 0%;
+  _sky_phase_start_before {
+    background-position[linear]: left 0px top -25%;
   }
   _sky_phase_end {
     background-position[linear]: left 0px top 125%;
