--- a/less/main.less
+++ b/less/main.less
@@ -147,7 +147,7 @@ html, body { height: 100%; }
 		
 		.-skrollr-dry-animation(~"@{uniqueName}-pos"; {
 			@backgroundPositionProp: ~"background-position[@{bgEasing}]";
-			_sky_phase_start { @{backgroundPositionProp}: left 0px top @initialScrollOffset; }
+			_sky_phase_start_before { @{backgroundPositionProp}: left 0px top @initialScrollOffset; }
 			_sky_phase_end { @{backgroundPositionProp}: left 0px top @endScrollOffset; }
 		});
 	}
@@ -160,10 +160,11 @@ html, body { height: 100%; }
 }
 
 #starfield1 {
+	@scrollOffsetFactor: 0.15;
 	.generateStarfieldRules(
 		starfield1;
 		1.0; 1.0;
-		0.0; 0.15;
+		(@scrollOffsetFactor * -0.2); @scrollOffsetFactor;
 		linear; linear
 	);
 	&.image, & .image {
@@ -171,10 +172,11 @@ html, body { height: 100%; }
 	}
 }
 #starfield2 {
+	@scrollOffsetFactor: 0.333;
 	.generateStarfieldRules(
 		starfield2;
 		0.0; 1.0;
-		0.0; 0.333;
+		(@scrollOffsetFactor * -0.2); @scrollOffsetFactor;
 		linearMidToEnd; linear
 	);
 	&.image, & .image {
@@ -182,10 +184,11 @@ html, body { height: 100%; }
 	}
 }
 #starfield3 {
+	@scrollOffsetFactor: 0.5;
 	.generateStarfieldRules(
 		starfield3;
 		0.0; 1.0;
-		0.0; 0.5;
+		(@scrollOffsetFactor * -0.2); @scrollOffsetFactor;
 		linearMidToEnd; linear
 	);
 	&.image, & .image {
@@ -193,10 +196,11 @@ html, body { height: 100%; }
 	}
 }
 #starfield4 {
+	@scrollOffsetFactor: 0.25;
 	.generateStarfieldRules(
 		starfield4;
 		0.25; 1.0;
-		0.0; 0.25;
+		(@scrollOffsetFactor * -0.2); @scrollOffsetFactor;
 		linearStartToMid; linear
 	);
 	&.image, & .image {
