Quarter easing functions / alpha tweaks
• New `lerpStartTo3rdQuarter()`, `lerp1stQuarterToEnd()`, and `lerp1stQuarterTo3rdQuarter()` functions map the linear range to ⅓ or ½ the range, capping to 0 or 1 at the moved range edges.
	• New `*StartTo3rdQuarter`, `*1stQuarterToEnd`, and `*1stQuarterTo3rdQuarter` Skrollr easing option variations re-map the input's range, then pass it to the named easing function.
• Changed starfield2's `@opacityEasing` to `outQuart1stQuarterTo3rdQuarter`, starfield3's to `outExpoMidToEnd`, and starfield4's to `outQuadStartToMid`.
	» To help make the star appearances spaced out but noticable.
• Changed starfield4's `@initialOpacity` from `0.25` to `0.0`.
	» Cleaner look with only 1 field initially shown.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6536,10 +6536,10 @@ body {
 }
 @-skrollr-keyframes starfield2-op {
   _sky_phase_start {
-    opacity[linearMidToEnd]: 0;
+    opacity[outQuart1stQuarterTo3rdQuarter]: 0;
   }
   _sky_phase_end {
-    opacity[linearMidToEnd]: 1;
+    opacity[outQuart1stQuarterTo3rdQuarter]: 1;
   }
 }
 #starfield2.image,
@@ -6566,10 +6566,10 @@ body {
 }
 @-skrollr-keyframes starfield3-op {
   _sky_phase_start {
-    opacity[linearMidToEnd]: 0;
+    opacity[outExpoMidToEnd]: 0;
   }
   _sky_phase_end {
-    opacity[linearMidToEnd]: 1;
+    opacity[outExpoMidToEnd]: 1;
   }
 }
 #starfield3.image,
@@ -6590,16 +6590,16 @@ body {
   background-image: url('../graphics/starfield3.s720.png');
 }
 #starfield4 {
-  opacity: 0.25;
-  filter: alpha(opacity=25);
+  opacity: 0;
+  filter: alpha(opacity=0);
   -skrollr-animation-name: starfield4-op;
 }
 @-skrollr-keyframes starfield4-op {
   _sky_phase_start {
-    opacity[linearStartToMid]: 0.25;
+    opacity[outQuadStartToMid]: 0;
   }
   _sky_phase_end {
-    opacity[linearStartToMid]: 1;
+    opacity[outQuadStartToMid]: 1;
   }
 }
 #starfield4.image,
