Fix: New .back.clip wrapper
• New `.back.clip` wrapper div for sky-phase's `.back.fixed` element.
• New back `&.clip` CSS `position`s itself as `absolute` and applies an `clip()` at the edges of itself (`auto` for each side).
	» Selector evaluates to `#sky-phase > .back.clip, #sky-phase > .back .back.clip`.
	» The `absolute` position is `!important` to ensure other CSS hasn't overridden it— `clip()` doesn't work unless it's on an element with absolute or fixed positioning.
	» Clipping the content like this helps iOS know when to redraw the next phase's content because there's nothing present (other than the body) where the ambitions-phase needs to be.  It also seems to help performance as whole— the browser knows that it only needs to redraw the screen area, not the whole phase's height.

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6428,6 +6428,11 @@ body {
 #sky-phase > .back .back.fixed {
   position: fixed;
 }
+#sky-phase > .back.clip,
+#sky-phase > .back .back.clip {
+  position: absolute !important;
+  clip: rect(auto, auto, auto, auto);
+}
 #sky-phase > .back.fill,
 #sky-phase > .back .back.fill {
   background-color: #68aeae;
