Fix: Nesting `& when not (…) and (…) {`
• Nesting the two conditions of `.generateStarfieldRules()`' `& when not (…) and (…) {` separately to achieve the same intended effect.
	» LESS's implementation appears to be buggy— when passed an @initialOpacity of `0.0` and an @endOpacity of `0.5` it incorrectly compiles out the contents.

--- a/less/main.less
+++ b/less/main.less
@@ -165,14 +165,16 @@ html, body { height: 100%; }
 .generateStarfieldRules(@uniqueName; @initialOpacity; @endOpacity; @initialScrollOffsetFactor; @endScrollOffsetFactor; @opacityEasing; @bgEasing) {
 	&:extend(.starfield all);
 	
-	& when not (@initialOpacity = 1.0) and (@endOpacity = 1.0) {
-		.opacity(@initialOpacity);
-		
-		.-skrollr-dry-animation(~"@{uniqueName}-op"; {
-			@opacityProp: ~"opacity[@{opacityEasing}]";
-			_sky_phase_start { @{opacityProp}: @initialOpacity; }
-			_sky_phase_end { @{opacityProp}: @endOpacity; }
-		});
+	& when not (@initialOpacity = 1.0) {
+	 	& when not (@endOpacity = 1.0) {
+			.opacity(@initialOpacity);
+			
+			.-skrollr-dry-animation(~"@{uniqueName}-op"; {
+				@opacityProp: ~"opacity[@{opacityEasing}]";
+				_sky_phase_start { @{opacityProp}: @initialOpacity; }
+				_sky_phase_end { @{opacityProp}: @endOpacity; }
+			});
+		}
 	}
 	
 	&.image, & .image {
