Revised constants: _appear/_open/_close/_disappear
• New `*_appear` and `*_open` constants discern the difference between starting to appear on the screen (element-top at viewport-bottom; formerly `*_start` for most), and being fully present on the screen (element-top at viewport-top).
	» Sky-phase doesn't get a `sky_phase_appear` because it's the first section— so that'll never happen.
• New `*_close` and `*_disappear` constants discern the difference between covering the screen but about to scroll off (element-bottom at viewport-bottom), and having just disappeared off the top of the screen (element-bottom at viewport-top).
• Updated `#sky-phase`'s `sky-fill-gradient` animation to run to `_sky_phase_close`, so we get to see the full transition.
• Updated existing usages of `*_start` to `*_open` and `*_end` to `*_disappear`.

--- a/less/main.less
+++ b/less/main.less
@@ -124,13 +124,13 @@ html, body { height: 100%; }
 				
 				.-skrollr-dry-animation(sky-fill-gradient; {
 					@backgroundProp: ~"background[linear]";
-					_sky_phase_start {
+					_sky_phase_open {
 						@{backgroundProp}: linear-gradient(
 							to bottom,
 							@sky-eve-top-as-rgb, @sky-eve-mid-as-rgb, @sky-eve-bottom-as-rgb
 						) no-repeat;
 					}
-					_sky_phase_center {
+					_sky_phase_close {
 						@{backgroundProp}: linear-gradient(
 							to bottom,
 							@sky-night-top-as-rgb, @sky-night-mid-as-rgb, @sky-night-bottom-as-rgb
@@ -193,8 +193,8 @@ html, body { height: 100%; }
 			
 			.-skrollr-dry-animation(~"@{uniqueName}-op"; {
 				@opacityProp: ~"opacity[@{opacityEasing}]";
-				_sky_phase_start { @{opacityProp}: @initialOpacity; }
-				_sky_phase_end { @{opacityProp}: @endOpacity; }
+				_sky_phase_open { @{opacityProp}: @initialOpacity; }
+				_sky_phase_disappear { @{opacityProp}: @endOpacity; }
 			});
 		}
 	}
@@ -206,8 +206,8 @@ html, body { height: 100%; }
 		
 		.-skrollr-dry-animation(~"@{uniqueName}-pos"; {
 			@backgroundPositionProp: ~"background-position[@{bgEasing}]";
-			_sky_phase_start_before { @{backgroundPositionProp}: left 0px top @initialScrollOffset; }
-			_sky_phase_end { @{backgroundPositionProp}: left 0px top @endScrollOffset; }
+			_sky_phase_open_before { @{backgroundPositionProp}: left 0px top @initialScrollOffset; }
+			_sky_phase_disappear { @{backgroundPositionProp}: left 0px top @endScrollOffset; }
 		});
 	}
 }
