--- a/css/styles.css
+++ b/css/styles.css
@@ -6313,6 +6313,10 @@ button.close {
   font-weight: 700;
   src: local("Oswald Bold"), local("Oswald-Bold"), url("/fonts/assets/Oswald-Bold.woff") format("woff"), url("/fonts/assets/Oswald-Bold.ttf") format("truetype");
 }
+.monologue {
+  font: 50px "Dancing Script", cursive;
+  font-weight: 400;
+}
 html,
 body {
   height: 100%;
@@ -6320,6 +6324,10 @@ body {
 .screen-height-rel .vh-50,
 .screen-height-rel.vh-50 {
   min-height: 50vh;
+}
+.screen-height-rel .vh-75,
+.screen-height-rel.vh-75 {
+  min-height: 75vh;
 }
 .screen-height-rel .vh-100,
 .screen-height-rel.vh-100 {
@@ -6345,6 +6353,10 @@ body {
 .base-height-rel.vh-50 {
   height: 500px;
 }
+.base-height-rel .vh-75,
+.base-height-rel.vh-75 {
+  height: 750px;
+}
 .base-height-rel .vh-100,
 .base-height-rel.vh-100 {
   height: 1000px;
@@ -6369,6 +6381,10 @@ body {
 .line-height-rel.vh-50 {
   height: 350px;
 }
+.line-height-rel .vh-75,
+.line-height-rel.vh-75 {
+  height: 525px;
+}
 .line-height-rel .vh-100,
 .line-height-rel.vh-100 {
   height: 700px;
@@ -6388,6 +6404,33 @@ body {
 .line-height-rel .vh-400,
 .line-height-rel.vh-400 {
   height: 2800px;
+}
+.vert-top-block {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.vert-top-block > * {
+  display: table-cell !important;
+  vertical-align: top;
+}
+.vert-middle-block {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.vert-middle-block > * {
+  display: table-cell !important;
+  vertical-align: middle;
+}
+.vert-bottom-block {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.vert-bottom-block > * {
+  display: table-cell !important;
+  vertical-align: bottom;
 }
 .monologue {
   font: 50px "Dancing Script", cursive;
@@ -6444,10 +6487,10 @@ body {
   -skrollr-animation-name: sky-fill-gradient;
 }
 @-skrollr-keyframes sky-fill-gradient {
-  _sky_phase_start {
+  _sky_phase_open {
     background[linear]: linear-gradient(to bottom, rgb(74, 108, 135), rgb(104, 174, 174), rgb(180, 206, 169)) no-repeat;
   }
-  _sky_phase_center {
+  _sky_phase_close {
     background[linear]: linear-gradient(to bottom, rgb(17, 5, 47), rgb(57, 32, 85), rgb(139, 57, 79)) no-repeat;
   }
 }
@@ -6523,10 +6566,10 @@ body {
   -skrollr-animation-name: starfield1-pos;
 }
 @-skrollr-keyframes starfield1-pos {
-  _sky_phase_start_before {
+  _sky_phase_open_before {
     background-position[linear]: left 0px top 63px;
   }
-  _sky_phase_end {
+  _sky_phase_disappear {
     background-position[linear]: left 0px top -315px;
   }
 }
@@ -6540,10 +6583,10 @@ body {
   -skrollr-animation-name: starfield2-pos;
 }
 @-skrollr-keyframes starfield2-pos {
-  _sky_phase_start_before {
+  _sky_phase_open_before {
     background-position[linear]: left 0px top 126px;
   }
-  _sky_phase_end {
+  _sky_phase_disappear {
     background-position[linear]: left 0px top -630px;
   }
 }
@@ -6557,10 +6600,10 @@ body {
   -skrollr-animation-name: starfield3-pos;
 }
 @-skrollr-keyframes starfield3-pos {
-  _sky_phase_start_before {
+  _sky_phase_open_before {
     background-position[linear]: left 0px top 210px;
   }
-  _sky_phase_end {
+  _sky_phase_disappear {
     background-position[linear]: left 0px top -1050px;
   }
 }
@@ -6574,10 +6617,10 @@ body {
   -skrollr-animation-name: starfield4-pos;
 }
 @-skrollr-keyframes starfield4-pos {
-  _sky_phase_start_before {
+  _sky_phase_open_before {
     background-position[linear]: left 0px top 84px;
   }
-  _sky_phase_end {
+  _sky_phase_disappear {
     background-position[linear]: left 0px top -420px;
   }
 }
