Added #lakestrip back image
• Added a `#lakestrip.back.image` div under the title-phase’s `.back.fill`.
	» Within the back fill instead of after-it-as-a-sibling because… I don’t know, fewer elements?  Maybe I should’ve done the sky-phase’s fill this way too.  I guess this is a test to make sure both approaches work on all browsers.
• New `#lakestrip {}` CSS sets up the lakestrip graphics to be used as the `background-image` for each of Boostraps media query modes (`max-width: @screen-xs-max`, `min-width: @screen-sm`, `min-width: @screen-md`, and `min-width: @screen-lg`).
	• Separate `background-repeat`/`-size`/`-position` properties set it to not repeat, be 100% width with aspect-ratio-auto height, and be position at x=0, y=50%.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6676,5 +6676,35 @@ body {
 #starfield4 .image {
   background-image: url('../graphics/starfield4.s700.png');
 }
+#lakestrip.image,
+#lakestrip .image {
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: 0 50%;
+}
+@media (max-width: 767px) {
+  #lakestrip.image,
+  #lakestrip .image {
+    background-image: url('../graphics/lakestrip.767x250.png');
+  }
+}
+@media (min-width: 768px) {
+  #lakestrip.image,
+  #lakestrip .image {
+    background-image: url('../graphics/lakestrip.991x323.png');
+  }
+}
+@media (min-width: 992px) {
+  #lakestrip.image,
+  #lakestrip .image {
+    background-image: url('../graphics/lakestrip.1199x390.png');
+  }
+}
+@media (min-width: 1200px) {
+  #lakestrip.image,
+  #lakestrip .image {
+    background-image: url('../graphics/lakestrip.1920x625.png');
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
