--- a/less/main.less
+++ b/less/main.less
@@ -283,6 +283,15 @@ html, body { height: 100%; }
 		
 		background-repeat: no-repeat;
 		background-size: 100% auto;
-		background-position: 0 50%;
+		
+		@initialScrollOffset: 200%;
+		@endScrollOffset: 40%;
+		background-position: 0 @endScrollOffset; // initially at end just-in-case we don't have JS
+		
+		.-skrollr-dry-animation(~"lakestrip-pos"; {
+			@backgroundPositionProp: ~"background-position[linear]";
+			_title_phase_appear { @{backgroundPositionProp}: 0 @initialScrollOffset; }
+			_title_phase_close { @{backgroundPositionProp}: 0 @endScrollOffset; }
+		});
 	}
 }
