Added title-phase graphics
• Added 3 “piece” divs under #title-phase’s .container: #title-logo, #title-closing, and #title-bottom.
	» Each also has an `.inner` as a direct intermediate child, to help with positioning logic.
	• `#title-logo` has a `#lacquer` img src-ing `logo_lacquer_slanted.293x164.svg`, and a `#fromdreamstoice` img src-ing `logo_fromdreamstoice_slanted.290x165.svg`.
	• `#title-closing` has a “Leave your mark this winter.” `.statement` div, and a `#stargazer` img src-ing `char_stargazer.267x139.svg`.
	• `#title-bottom` has a `#comingsoon` img src-ing `comingsoon.206x63.svg`.
• New `.statement` style uses the codystar font at 2.5× the `@font-base-size`, colored teal-darker, and with a double-white text shadow (2px blur and 5px blur).
• Bootstrap `.container`/`.container-fluid`s now position-relative in order contain all of the absolute-positioned elements within.
• New `.title-piece` CSS positions absolute, with centering code, sets up `> .inner` elements to be position-relative with 100% width/height, and children of the .inner to be position-absolute.
	» Extended by `#title-logo`, `#title-closing`, and `#title-bottom`, since they all work about the same way.
	» The base absolute-position allows each to position itself where it wants in the title-phase.
	» The `> .inner` relative-position just contains the absolute-positioning of descendents.
	» The `> .inner > *` absolute-position applies to our image and text elements: #lacquer, #fromdreamstoice, .statement, #stargazer, and #comingsoon.
	• Piece positioning:
		◦ #title-logo is positioned 5% from the top
		◦ #title-closing 68% from the top, stretching to the bottom
		◦ #title-bottom at the bottom edge
	• `#title-logo` sets a `@logoBaseWidth`/`Height` vars based on the logo’s natural size, and then runs it through a multiplier (which is intended to be different for different media queries) before setting the `width:`/`height:`.
		• The inner `#lacquer` and `#fromdreamstoice` elements turn pixel size

--- a/css/styles.css
+++ b/css/styles.css
@@ -6317,6 +6317,12 @@ button.close {
   font: 50px "Dancing Script", cursive;
   font-weight: 400;
 }
+.statement {
+  font: 50px "Codystar", sans-serif;
+  font-weight: 400;
+  color: #1e5558;
+  text-shadow: 0 0 2px #ffffff, 0 0 5px #ffffff;
+}
 html,
 body {
   height: 100%;
@@ -6520,7 +6526,6 @@ body {
 #title-phase {
   position: relative;
   z-index: 300;
-  color: #3e2940;
 }
 #title-phase > .back {
   z-index: -1;
@@ -6543,6 +6548,10 @@ body {
   background: -ms-linear-gradient(to bottom, #ffffff, #accdea) no-repeat;
   background: -o-linear-gradient(to bottom, #ffffff, #accdea) no-repeat;
   background: linear-gradient(to bottom, #ffffff, #accdea) no-repeat;
+}
+#title-phase .container,
+#title-phase .container-fluid {
+  position: relative;
 }
 .starfield.image,
 .starfield .image,
@@ -6714,6 +6723,69 @@ body {
   _title_phase_close {
     background-position[linear]: 0 40%;
   }
+}
+.title-piece,
+#title-logo,
+#title-closing,
+#title-bottom {
+  position: absolute;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+}
+.title-piece > .inner,
+#title-logo > .inner,
+#title-closing > .inner,
+#title-bottom > .inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.title-piece > .inner > *,
+#title-logo > .inner > *,
+#title-closing > .inner > *,
+#title-bottom > .inner > * {
+  position: absolute;
+}
+#title-logo {
+  top: 5%;
+  width: 726px;
+  height: 381.6px;
+}
+#title-logo > .inner #lacquer {
+  width: 82.6446281%;
+  height: auto;
+  left: 0%;
+  top: 0%;
+}
+#title-logo > .inner #fromdreamstoice {
+  width: 47.9338843%;
+  height: auto;
+  left: 52.0661157%;
+  top: 48.11320755%;
+}
+#title-closing {
+  top: 68%;
+  bottom: 0%;
+}
+#title-closing > .inner .statement {
+  text-align: center;
+  left: 0;
+  right: 0;
+}
+#title-closing > .inner #stargazer {
+  width: 300px;
+  height: auto;
+  left: 50%;
+  margin-left: -150px;
+  bottom: 0;
+}
+#title-bottom {
+  bottom: 0%;
+}
+#title-bottom > .inner #comingsoon {
+  bottom: 10px;
+  right: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
