--- a/less/main.less
+++ b/less/main.less
@@ -19,6 +19,14 @@
 	@font-size: (@font-size-base * 2.5);
 	.font_dancing-script(@font-size);
 }
+.statement {
+	@font-size: (@font-size-base * 2.5);
+	.font_codystar(@font-size);
+	
+	color: @teal-darker;
+	text-shadow: 0 0 2px rgba(255, 255, 255, 1.0),
+		0 0 5px rgba(255, 255, 255, 1.0);
+}
 
 
 
@@ -158,8 +166,6 @@ html, body { height: 100%; }
 	.phase;
 	z-index: 300;
 	
-	color: @purple-darker;
-	
 	> .back {
 		&, & .back {
 			&.fill {
@@ -170,6 +176,10 @@ html, body { height: 100%; }
 				);
 			}
 		}
+	}
+	
+	.container, .container-fluid {
+		position: relative; // everything inside is absolutely-positioned
 	}
 }
 
@@ -293,5 +303,82 @@ html, body { height: 100%; }
 			_title_phase_appear { @{backgroundPositionProp}: 0 @initialScrollOffset; }
 			_title_phase_close { @{backgroundPositionProp}: 0 @endScrollOffset; }
 		});
+	}
+}
+
+.title-piece {
+	position: absolute;
+	margin: 0 auto; left: 0; right: 0;
+	
+	> .inner {
+		position: relative;
+		width: 100%; height: 100%;
+		
+		> * {
+			position: absolute;
+		}
+	}
+}
+
+#title-logo {
+	&:extend(.title-piece all);
+	
+	top: 5%;
+	
+	@logoBaseWidth: 605px;
+	@logoBaseHeight: 318px;
+	
+	@logoScale: 1.2;
+	width: (@logoBaseWidth * @logoScale); height: (@logoBaseHeight * @logoScale);
+	
+	> .inner {
+		#lacquer {
+			@width: (500px / @logoBaseWidth); width: percentage(@width);
+			height: auto;
+			
+			@left: (0px / @logoBaseWidth); left: percentage(@left);
+			@top: (0px / @logoBaseHeight); top: percentage(@top);
+		}
+		#fromdreamstoice {
+			@width: (290px / @logoBaseWidth); width: percentage(@width);
+			height: auto;
+			
+			@left: (315px / @logoBaseWidth); left: percentage(@left);
+			@top: (153px / @logoBaseHeight); top: percentage(@top);
+		}
+	}
+}
+
+#title-closing {
+	&:extend(.title-piece all);
+	
+	top: 68%; bottom: 0%;
+	
+	> .inner {
+		.statement {
+			text-align: center;
+			left: 0; right: 0;
+		}
+		#stargazer {
+			@stargazerWidth: 300px; width: @stargazerWidth;
+			height: auto;
+			
+			left: 50%;
+			margin-left: (-@stargazerWidth / 2);
+			
+			bottom: 0;
+		}
+	}
+}
+
+#title-bottom {
+	&:extend(.title-piece all);
+	
+	bottom: 0%;
+	
+	> .inner {
+		#comingsoon {
+			bottom: 10px; right: 10px;
+		}
 	}
 }
