Split up verses to match typographic mockup
• Split up each of the chunks of `.monologue` text into `.verse` spans, matching the structure of the typographical layout mockup (`lacquergame.com-(2014-11-02-at-9-56-pm)--containers-outlined.jpg`).
	» Also re-capitalized, re-punctuated, replaced, and removed text to match.
	» No more `<br>`s.
• New `.verse` CSS rule just changes the display to block (for now).
	» Decided to use <span>s that are overriden to display as block (instead of <div>s) because the content itself is span-like— it still works and makes sense without line breaks.  What we're doing here is just making it prettier, not dealing with something that is intrinsically block-based (like page layout is).

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6323,6 +6323,9 @@ button.close {
   color: #1e5558;
   text-shadow: 0 0 2px #ffffff, 0 0 5px #ffffff;
 }
+.verse {
+  display: block;
+}
 html,
 body {
   height: 100%;
