Monologue cabin-sketch 48px (36pt)
• Changed the `@font-size-base` to 24px.
	» Half of our intended monologue size, and we probably won't want to use anything smaller than 24px for any text on the page later on, since it's a pretty large/bold layout.
• Changed `.monologue`'s font to `cabin-sketch-regular` at `2 *` the font-size-base, coming out to 48px, which appears to be equivalent to 36pt (but we want to use `px` for compatibility).

--- a/less/main.less
+++ b/less/main.less
@@ -13,11 +13,11 @@
 
 // Text Styling
 
-@font-size-base: 20px;
+@font-size-base: 24px;
 
 .monologue {
-	@font-size: (@font-size-base * 2.5);
-	.font_dancing-script(@font-size);
+	@font-size: (@font-size-base * 2); // 48px, should be equivalent to 36pt
+	.font_cabin-sketch-regular(@font-size);
 }
 .statement {
 	@font-size: (@font-size-base * 2.5);
