--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -882,7 +882,7 @@ html {
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.42857143;
   color: #333333;
   background-color: #ffffff;
@@ -946,8 +946,8 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 28px;
-  margin-bottom: 28px;
+  margin-top: 34px;
+  margin-bottom: 34px;
   border: 0;
   border-top: 1px solid #eeeeee;
 }
@@ -1021,8 +1021,8 @@ h2,
 .h2,
 h3,
 .h3 {
-  margin-top: 28px;
-  margin-bottom: 14px;
+  margin-top: 34px;
+  margin-bottom: 17px;
 }
 h1 small,
 .h1 small,
@@ -1044,8 +1044,8 @@ h5,
 .h5,
 h6,
 .h6 {
-  margin-top: 14px;
-  margin-bottom: 14px;
+  margin-top: 17px;
+  margin-bottom: 17px;
 }
 h4 small,
 .h4 small,
@@ -1063,45 +1063,45 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 52px;
+  font-size: 62px;
 }
 h2,
 .h2 {
-  font-size: 43px;
+  font-size: 51px;
 }
 h3,
 .h3 {
-  font-size: 34px;
+  font-size: 41px;
 }
 h4,
 .h4 {
-  font-size: 25px;
+  font-size: 30px;
 }
 h5,
 .h5 {
-  font-size: 20px;
+  font-size: 24px;
 }
 h6,
 .h6 {
-  font-size: 17px;
+  font-size: 21px;
 }
 p {
-  margin: 0 0 14px;
+  margin: 0 0 17px;
 }
 .lead {
-  margin-bottom: 28px;
-  font-size: 23px;
+  margin-bottom: 34px;
+  font-size: 27px;
   font-weight: 300;
   line-height: 1.4;
 }
 @media (min-width: 768px) {
   .lead {
-    font-size: 30px;
+    font-size: 36px;
   }
 }
 small,
 .small {
-  font-size: 85%;
+  font-size: 87%;
 }
 cite {
   font-style: normal;
@@ -1200,14 +1200,14 @@ a.bg-danger:hover {
   background-color: #e4b9b9;
 }
 .page-header {
-  padding-bottom: 13px;
-  margin: 56px 0 28px;
+  padding-bottom: 16px;
+  margin: 68px 0 34px;
   border-bottom: 1px solid #eeeeee;
 }
 ul,
 ol {
   margin-top: 0;
-  margin-bottom: 14px;
+  margin-bottom: 17px;
 }
 ul ul,
 ol ul,
@@ -1231,7 +1231,7 @@ ol ol {
 }
 dl {
   margin-top: 0;
-  margin-bottom: 28px;
+  margin-bottom: 34px;
 }
 dt,
 dd {
@@ -1267,9 +1267,9 @@ abbr[data-original-title] {
   text-transform: uppercase;
 }
 blockquote {
-  padding: 14px 28px;
-  margin: 0 0 28px;
-  font-size: 25px;
+  padding: 17px 34px;
+  margin: 0 0 34px;
+  font-size: 30px;
   border-left: 5px solid #eeeeee;
 }
 blockquote p:last-child,
@@ -1319,7 +1319,7 @@ blockquote:after {
   content: "";
 }
 address {
-  margin-bottom: 28px;
+  margin-bottom: 34px;
   font-style: normal;
   line-height: 1.42857143;
 }
@@ -1351,9 +1351,9 @@ kbd kbd {
 }
 pre {
   display: block;
-  padding: 13.5px;
-  margin: 0 0 14px;
-  font-size: 19px;
+  padding: 16.5px;
+  margin: 0 0 17px;
+  font-size: 23px;
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
@@ -2050,7 +2050,7 @@ th {
 .table {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 28px;
+  margin-bottom: 34px;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -2231,7 +2231,7 @@ table th[class*="col-"] {
 @media screen and (max-width: 767px) {
   .table-responsive {
     width: 100%;
-    margin-bottom: 21px;
+    margin-bottom: 25.5px;
     overflow-y: hidden;
     overflow-x: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar;
@@ -2285,8 +2285,8 @@ legend {
   display: block;
   width: 100%;
   padding: 0;
-  margin-bottom: 28px;
-  font-size: 30px;
+  margin-bottom: 34px;
+  font-size: 36px;
   line-height: inherit;
   color: #333333;
   border: 0;
@@ -2330,16 +2330,16 @@ input[type="checkbox"]:focus {
 output {
   display: block;
   padding-top: 7px;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.42857143;
   color: #555555;
 }
 .form-control {
   display: block;
   width: 100%;
-  height: 42px;
+  height: 48px;
   padding: 6px 12px;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.42857143;
   color: #555555;
   background-color: #ffffff;
@@ -2385,20 +2385,20 @@ input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-  line-height: 42px;
+  line-height: 48px;
   line-height: 1.42857143 \0;
 }
 input[type="date"].input-sm,
 input[type="time"].input-sm,
 input[type="datetime-local"].input-sm,
 input[type="month"].input-sm {
-  line-height: 37px;
+  line-height: 43px;
 }
 input[type="date"].input-lg,
 input[type="time"].input-lg,
 input[type="datetime-local"].input-lg,
 input[type="month"].input-lg {
-  line-height: 56px;
+  line-height: 62px;
 }
 .form-group {
   margin-bottom: 15px;
@@ -2407,7 +2407,7 @@ input[type="month"].input-lg {
 .checkbox {
   position: relative;
   display: block;
-  min-height: 28px;
+  min-height: 34px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -2476,15 +2476,15 @@ fieldset[disabled] .checkbox label {
 }
 .input-sm,
 .form-horizontal .form-group-sm .form-control {
-  height: 37px;
+  height: 43px;
   padding: 5px 10px;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 1.5;
   border-radius: 3px;
 }
 select.input-sm {
-  height: 37px;
-  line-height: 37px;
+  height: 43px;
+  line-height: 43px;
 }
 textarea.input-sm,
 select[multiple].input-sm {
@@ -2492,15 +2492,15 @@ select[multiple].input-sm {
 }
 .input-lg,
 .form-horizontal .form-group-lg .form-control {
-  height: 56px;
+  height: 62px;
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 30px;
   line-height: 1.33;
   border-radius: 6px;
 }
 select.input-lg {
-  height: 56px;
-  line-height: 56px;
+  height: 62px;
+  line-height: 62px;
 }
 textarea.input-lg,
 select[multiple].input-lg {
@@ -2510,28 +2510,28 @@ select[multiple].input-lg {
   position: relative;
 }
 .has-feedback .form-control {
-  padding-right: 52.5px;
+  padding-right: 60px;
 }
 .form-control-feedback {
   position: absolute;
-  top: 33px;
+  top: 39px;
   right: 0;
   z-index: 2;
   display: block;
-  width: 42px;
-  height: 42px;
-  line-height: 42px;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
   text-align: center;
 }
 .input-lg + .form-control-feedback {
-  width: 56px;
-  height: 56px;
-  line-height: 56px;
+  width: 62px;
+  height: 62px;
+  line-height: 62px;
 }
 .input-sm + .form-control-feedback {
-  width: 37px;
-  height: 37px;
-  line-height: 37px;
+  width: 43px;
+  height: 43px;
+  line-height: 43px;
 }
 .has-success .help-block,
 .has-success .control-label,
@@ -2677,7 +2677,7 @@ select[multiple].input-lg {
 }
 .form-horizontal .radio,
 .form-horizontal .checkbox {
-  min-height: 35px;
+  min-height: 41px;
 }
 .form-horizontal .form-group {
   margin-left: -15px;
@@ -2715,7 +2715,7 @@ select[multiple].input-lg {
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 12px;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.42857143;
   border-radius: 4px;
   -webkit-user-select: none;
@@ -3034,21 +3034,21 @@ fieldset[disabled] .btn-link:focus {
 .btn-lg,
 .btn-group-lg > .btn {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 30px;
   line-height: 1.33;
   border-radius: 6px;
 }
 .btn-sm,
 .btn-group-sm > .btn {
   padding: 5px 10px;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 1.5;
   border-radius: 3px;
 }
 .btn-xs,
 .btn-group-xs > .btn {
   padding: 1px 5px;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -3120,7 +3120,7 @@ tbody.collapse.in {
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
-  font-size: 20px;
+  font-size: 24px;
   text-align: left;
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -3136,7 +3136,7 @@ tbody.collapse.in {
 }
 .dropdown-menu .divider {
   height: 1px;
-  margin: 13px 0;
+  margin: 16px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
@@ -3193,7 +3193,7 @@ tbody.collapse.in {
 .dropdown-header {
   display: block;
   padding: 3px 20px;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 1.42857143;
   color: #777777;
   white-space: nowrap;
@@ -3423,17 +3423,17 @@ tbody.collapse.in {
 .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
-  height: 56px;
+  height: 62px;
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 30px;
   line-height: 1.33;
   border-radius: 6px;
 }
 select.input-group-lg > .form-control,
 select.input-group-lg > .input-group-addon,
 select.input-group-lg > .input-group-btn > .btn {
-  height: 56px;
-  line-height: 56px;
+  height: 62px;
+  line-height: 62px;
 }
 textarea.input-group-lg > .form-control,
 textarea.input-group-lg > .input-group-addon,
@@ -3446,17 +3446,17 @@ select[multiple].input-group-lg > .input-group-btn > .btn {
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
-  height: 37px;
+  height: 43px;
   padding: 5px 10px;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 1.5;
   border-radius: 3px;
 }
 select.input-group-sm > .form-control,
 select.input-group-sm > .input-group-addon,
 select.input-group-sm > .input-group-btn > .btn {
-  height: 37px;
-  line-height: 37px;
+  height: 43px;
+  line-height: 43px;
 }
 textarea.input-group-sm > .form-control,
 textarea.input-group-sm > .input-group-addon,
@@ -3484,7 +3484,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .input-group-addon {
   padding: 6px 12px;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: normal;
   line-height: 1;
   color: #555555;
@@ -3495,12 +3495,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .input-group-addon.input-sm {
   padding: 5px 10px;
-  font-size: 17px;
+  font-size: 21px;
   border-radius: 3px;
 }
 .input-group-addon.input-lg {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 30px;
   border-radius: 6px;
 }
 .input-group-addon input[type="radio"],
@@ -3594,7 +3594,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav .nav-divider {
   height: 1px;
-  margin: 13px 0;
+  margin: 16px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
@@ -3752,7 +3752,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 28px;
+  margin-bottom: 34px;
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
@@ -3859,9 +3859,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  padding: 11px 15px;
-  font-size: 25px;
-  line-height: 28px;
+  padding: 8px 15px;
+  font-size: 30px;
+  line-height: 34px;
   height: 50px;
 }
 .navbar-brand:hover,
@@ -3904,12 +3904,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 5.5px -15px;
+  margin: 4px -15px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
-  line-height: 28px;
+  line-height: 34px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
@@ -3926,7 +3926,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     padding: 5px 15px 5px 25px;
   }
   .navbar-nav .open .dropdown-menu > li > a {
-    line-height: 28px;
+    line-height: 34px;
   }
   .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -3942,8 +3942,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 11px;
-    padding-bottom: 11px;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
   .navbar-nav.navbar-right:last-child {
     margin-right: -15px;
@@ -3965,8 +3965,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 @media (min-width: 768px) {
   .navbar-form .form-group {
@@ -4045,20 +4045,20 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom-left-radius: 0;
 }
 .navbar-btn {
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 .navbar-btn.btn-sm {
-  margin-top: 6.5px;
-  margin-bottom: 6.5px;
+  margin-top: 3.5px;
+  margin-bottom: 3.5px;
 }
 .navbar-btn.btn-xs {
   margin-top: 14px;
   margin-bottom: 14px;
 }
 .navbar-text {
-  margin-top: 11px;
-  margin-bottom: 11px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 @media (min-width: 768px) {
   .navbar-text {
@@ -4270,7 +4270,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 .breadcrumb {
   padding: 8px 15px;
-  margin-bottom: 28px;
+  margin-bottom: 34px;
   list-style: none;
   background-color: #f5f5f5;
   border-radius: 4px;
@@ -4289,7 +4289,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: 28px 0;
+  margin: 34px 0;
   border-radius: 4px;
 }
 .pagination > li {
@@ -4352,7 +4352,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination-lg > li > a,
 .pagination-lg > li > span {
   padding: 10px 16px;
-  font-size: 25px;
+  font-size: 30px;
 }
 .pagination-lg > li:first-child > a,
 .pagination-lg > li:first-child > span {
@@ -4367,7 +4367,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination-sm > li > a,
 .pagination-sm > li > span {
   padding: 5px 10px;
-  font-size: 17px;
+  font-size: 21px;
 }
 .pagination-sm > li:first-child > a,
 .pagination-sm > li:first-child > span {
@@ -4381,7 +4381,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 .pager {
   padding-left: 0;
-  margin: 28px 0;
+  margin: 34px 0;
   list-style: none;
   text-align: center;
 }
@@ -4488,7 +4488,7 @@ a.label:focus {
   display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
-  font-size: 17px;
+  font-size: 21px;
   font-weight: bold;
   color: #ffffff;
   line-height: 1;
@@ -4535,7 +4535,7 @@ a.list-group-item.active > .badge,
 }
 .jumbotron p {
   margin-bottom: 15px;
-  font-size: 30px;
+  font-size: 36px;
   font-weight: 200;
 }
 .jumbotron > hr {
@@ -4558,13 +4558,13 @@ a.list-group-item.active > .badge,
   }
   .jumbotron h1,
   .jumbotron .h1 {
-    font-size: 90px;
+    font-size: 108px;
   }
 }
 .thumbnail {
   display: block;
   padding: 4px;
-  margin-bottom: 28px;
+  margin-bottom: 34px;
   line-height: 1.42857143;
   background-color: #ffffff;
   border: 1px solid #dddddd;
@@ -4589,7 +4589,7 @@ a.thumbnail.active {
 }
 .alert {
   padding: 15px;
-  margin-bottom: 28px;
+  margin-bottom: 34px;
   border: 1px solid transparent;
   border-radius: 4px;
 }
@@ -4680,8 +4680,8 @@ a.thumbnail.active {
 }
 .progress {
   overflow: hidden;
-  height: 28px;
-  margin-bottom: 28px;
+  height: 34px;
+  margin-bottom: 34px;
   background-color: #f5f5f5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -4691,8 +4691,8 @@ a.thumbnail.active {
   float: left;
   width: 0%;
   height: 100%;
-  font-size: 17px;
-  line-height: 28px;
+  font-size: 21px;
+  line-height: 34px;
   color: #ffffff;
   text-align: center;
   background-color: #428bca;
@@ -4962,7 +4962,7 @@ a.list-group-item-danger.active:focus {
   line-height: 1.3;
 }
 .panel {
-  margin-bottom: 28px;
+  margin-bottom: 34px;
   background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -4984,7 +4984,7 @@ a.list-group-item-danger.active:focus {
 .panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 23px;
+  font-size: 27px;
   color: inherit;
 }
 .panel-title > a {
@@ -5140,7 +5140,7 @@ a.list-group-item-danger.active:focus {
   margin-bottom: 0;
 }
 .panel-group {
-  margin-bottom: 28px;
+  margin-bottom: 34px;
 }
 .panel-group .panel {
   margin-bottom: 0;
@@ -5318,7 +5318,7 @@ a.list-group-item-danger.active:focus {
 }
 .close {
   float: right;
-  font-size: 30px;
+  font-size: 36px;
   font-weight: bold;
   line-height: 1;
   color: #000000;
@@ -5466,7 +5466,7 @@ button.close {
   z-index: 1070;
   display: block;
   visibility: visible;
-  font-size: 17px;
+  font-size: 21px;
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -5592,7 +5592,7 @@ button.close {
 .popover-title {
   margin: 0;
   padding: 8px 14px;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: normal;
   line-height: 18px;
   background-color: #f7f7f7;
@@ -6314,11 +6314,11 @@ button.close {
   src: local("Oswald Bold"), local("Oswald-Bold"), url("/fonts/assets/Oswald-Bold.woff") format("woff"), url("/fonts/assets/Oswald-Bold.ttf") format("truetype");
 }
 .monologue {
-  font: 50px "Dancing Script", cursive;
+  font: 48px "Cabin Sketch", sans-serif;
   font-weight: 400;
 }
 .statement {
-  font: 50px "Codystar", sans-serif;
+  font: 60px "Codystar", sans-serif;
   font-weight: 400;
   color: #1e5558;
   text-shadow: 0 0 2px #ffffff, 0 0 5px #ffffff;
@@ -6388,31 +6388,31 @@ body {
 }
 .line-height-rel .vh-50,
 .line-height-rel.vh-50 {
-  height: 350px;
+  height: 425px;
 }
 .line-height-rel .vh-75,
 .line-height-rel.vh-75 {
-  height: 525px;
+  height: 637.5px;
 }
 .line-height-rel .vh-100,
 .line-height-rel.vh-100 {
-  height: 700px;
+  height: 850px;
 }
 .line-height-rel .vh-150,
 .line-height-rel.vh-150 {
-  height: 1050px;
+  height: 1275px;
 }
 .line-height-rel .vh-200,
 .line-height-rel.vh-200 {
-  height: 1400px;
+  height: 1700px;
 }
 .line-height-rel .vh-300,
 .line-height-rel.vh-300 {
-  height: 2100px;
+  height: 2550px;
 }
 .line-height-rel .vh-400,
 .line-height-rel.vh-400 {
-  height: 2800px;
+  height: 3400px;
 }
 .vert-top-block {
   display: table;
@@ -6583,15 +6583,15 @@ body {
 }
 #starfield1.image,
 #starfield1 .image {
-  background-position: 0 63px;
+  background-position: 0 76.5px;
   -skrollr-animation-name: starfield1-pos;
 }
 @-skrollr-keyframes starfield1-pos {
   _sky_phase_open_before {
-    background-position[linear]: 0 63px;
+    background-position[linear]: 0 76.5px;
   }
   _sky_phase_disappear {
-    background-position[linear]: 0 -315px;
+    background-position[linear]: 0 -382.5px;
   }
 }
 #starfield1.image,
@@ -6613,15 +6613,15 @@ body {
 }
 #starfield2.image,
 #starfield2 .image {
-  background-position: 0 126px;
+  background-position: 0 153px;
   -skrollr-animation-name: starfield2-pos;
 }
 @-skrollr-keyframes starfield2-pos {
   _sky_phase_open_before {
-    background-position[linear]: 0 126px;
+    background-position[linear]: 0 153px;
   }
   _sky_phase_disappear {
-    background-position[linear]: 0 -630px;
+    background-position[linear]: 0 -765px;
   }
 }
 #starfield2.image,
@@ -6643,15 +6643,15 @@ body {
 }
 #starfield3.image,
 #starfield3 .image {
-  background-position: 0 210px;
+  background-position: 0 255px;
   -skrollr-animation-name: starfield3-pos;
 }
 @-skrollr-keyframes starfield3-pos {
   _sky_phase_open_before {
-    background-position[linear]: 0 210px;
+    background-position[linear]: 0 255px;
   }
   _sky_phase_disappear {
-    background-position[linear]: 0 -1050px;
+    background-position[linear]: 0 -1275px;
   }
 }
 #starfield3.image,
@@ -6673,15 +6673,15 @@ body {
 }
 #starfield4.image,
 #starfield4 .image {
-  background-position: 0 84px;
+  background-position: 0 102px;
   -skrollr-animation-name: starfield4-pos;
 }
 @-skrollr-keyframes starfield4-pos {
   _sky_phase_open_before {
-    background-position[linear]: 0 84px;
+    background-position[linear]: 0 102px;
   }
   _sky_phase_disappear {
-    background-position[linear]: 0 -420px;
+    background-position[linear]: 0 -510px;
   }
 }
 #starfield4.image,
@@ -6865,7 +6865,7 @@ h1 {
   border: 1px solid rgba(26, 26, 26, 0.1);
 }
 .color-swatch:after {
-  font-size: 85%;
+  font-size: 87%;
   font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
