--- a/less/main.less
+++ b/less/main.less
@@ -18,6 +18,10 @@
 .monologue {
 	@font-size: (@font-size-base * 2); // 48px, should be equivalent to 36pt
 	.font_cabin-sketch-regular(@font-size);
+	
+	b {
+		.font_cabin-sketch-bold(@font-size);
+	}
 }
 .statement {
 	@font-size: (@font-size-base * 2.5);
