Fix: Broken comingsoon graphic b/c of rename
• Updated the <img> tag to use the new name and width/height of the #comingsoon graphic: `comingsoon.180x63.svg`
• Added CSS to up-scale the #comingsoon element a touch to 210px wide (aspect-ratio-correct height).

--- a/css/styles-test.css
+++ b/css/styles-test.css
@@ -6791,6 +6791,8 @@ body {
   bottom: 0%;
 }
 #title-bottom > .inner #comingsoon {
+  width: 210px;
+  height: auto;
   bottom: 10px;
   right: 10px;
 }
