--- a/less/main.less
+++ b/less/main.less
@@ -386,6 +386,9 @@ html, body { height: 100%; }
 	
 	> .inner {
 		#comingsoon {
+			width: 210px;
+			height: auto;
+			
 			bottom: 10px; right: 10px;
 		}
 	}
